--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "assignment",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +20,8 @@
     "express-session": "^1.17.3",
     "git": "^0.1.5",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.12.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
